c4prj2_input/grade.txt
Grading at Fri Jul 31 10:49:05 UTC 2020
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘add_future_card’:
future.c:13:39: error: request for member ‘n_cards’ in something not a structure or union
       fc->decks[index].cards[fc->decks.n_cards++]=ptr;
                                       ^
Compilation of future.c failed

Overall Grade: F
